Call slotUpdateAvailabities when selection is made

BUG:444636
FIXED-IN:1.9.6