src/pdiff.cpp
@@ -1345,6 +1345,8 @@ void KDiff3App::slotSelectionEnd()
             }
         }
     }
+
+    slotUpdateAvailabilities();
 }
 
 void KDiff3App::slotClipboardChanged()
